# yunoball

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_AUDIT.md  README.md  docker-compose.yml  eslint.config.mjs  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  turbo.json
.claude/: launch.json
apps/api/: README.md  conftest.py  pyproject.toml  requirements.txt  vercel.json
apps/api/api/: index.py
apps/api/app/: cache.py  config.py  database.py  espn.py  espn_ids.py  llm.py  main.py  mock_nl2sql.py  ratelimit.py  schemas.py  seed.py
apps/api/app/eval/: __init__.py  __main__.py  golden.json  golden.py  harness.py  runner.py
apps/api/app/pipeline/: __init__.py  condense.py  enrich.py  execute.py  generate_sql.py  guard_sql.py  intent.py  narrate.py  resolve.py  retrieve.py
apps/api/app/query/: __init__.py  build.py  parse_llm.py  parse_rules.py  spec.py
apps/api/app/rag/: __init__.py  seed.py  store.py
apps/api/app/routers/: agent.py  fantasy.py  games.py  leaderboards.py  players.py  search.py  standings.py
apps/api/tests/: test_condense.py  test_enrich.py  test_eval.py  test_eval_reference.py  test_intent.py  test_pipeline.py  test_platform_routers.py  test_query_spec.py  test_ratelimit.py  test_resolve.py  test_resolve_cache_llm.py  test_standings.py
docs/: APP_FLOW.html  APP_FLOW.md  ARCHITECTURE.md  BACKEND_SCHEMA.html  BACKEND_SCHEMA.md  DEPLOYMENT.md  DESIGN_BRIEF.html  DESIGN_BRIEF.md  DOMAIN_COVERAGE.md  ENGINEERING_PLAN.html  ENGINEERING_PLAN.md  FRONTEND_SPEC.html  FRONTEND_SPEC.md  PRD.html  (+7 more)
(+185 files in other folders)
