[project]
name = "yunoball-api"
version = "0.0.0"
description = "YunoBall FastAPI backend — NL->SQL query pipeline over the NFL warehouse."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "openai>=1.59",
    "sqlglot>=26.0",
    "python-dotenv>=1.0",
    # Shared warehouse schema (install editable in dev):
    #   pip install -e ../../packages/db
    "yunoball-db",
]

[project.scripts]
yunoball-eval = "app.eval.harness:main"
yunoball-seed-rag = "app.rag.seed:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
